docs-archive/apache-airflow-providers-amazon/9.33.0/_sources/_api/airflow/providers/amazon/aws/operators/glue_crawler/index.rst.txt
airflow.providers.amazon.aws.operators.glue_crawler
===================================================

.. py:module:: airflow.providers.amazon.aws.operators.glue_crawler


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerCreateOperator
   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerUpdateOperator
   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerRunOperator
   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerDeleteOperator
   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerOperator


Module Contents
---------------

.. py:class:: GlueCrawlerCreateOperator(*, config, **kwargs)

   Bases: :py:obj:`_GlueCrawlerBaseOperator`


   Create an AWS Glue crawler.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCrawlerCreateOperator`

   :param config: Configurations for the AWS Glue crawler.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: config


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GlueCrawlerUpdateOperator(*, config, **kwargs)

   Bases: :py:obj:`_GlueCrawlerBaseOperator`


   Update an existing AWS Glue crawler.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCrawlerUpdateOperator`

   :param config: Configurations for the AWS Glue crawler.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: config


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GlueCrawlerRunOperator(*, crawler_name, poll_interval = 5, wait_for_completion = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), fail_on_already_running = True, **kwargs)

   Bases: :py:obj:`_GlueCrawlerBaseOperator`


   Run an existing AWS Glue crawler.

   AWS Glue Crawler is a serverless service that manages a catalog of
   metadata tables that contain the inferred schema, format and data
   types of data stores within the AWS cloud.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCrawlerRunOperator`

   :param crawler_name: Name of the AWS Glue crawler.
   :param poll_interval: Time (in seconds) to wait between two consecutive calls to check crawler status
   :param wait_for_completion: Whether to wait for crawl execution completion. (default: True)
   :param deferrable: If True, the operator will wait asynchronously for the crawl to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False)
   :param fail_on_already_running: If True (default), the operator will raise an exception when
       ``start_crawler()`` encounters a ``CrawlerRunningException`` (i.e., the crawler is already
       running). If False, the operator continues with the existing run and waits for it if
       ``wait_for_completion`` is True. Setting this to False is useful for handling retry-induced race
       conditions where boto3 retries trigger a second ``start_crawler()`` call after a network timeout
       on the first successful call. (default: True)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: poll_interval
      :value: 5



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: deferrable


   .. py:attribute:: fail_on_already_running
      :value: True



   .. py:attribute:: crawler_name


   .. py:method:: execute(context)

      Run an AWS Glue crawler from Airflow.

      :return: The name of the current Glue crawler.



   .. py:method:: execute_complete(context, event = None)


.. py:class:: GlueCrawlerDeleteOperator(*, crawler_name, **kwargs)

   Bases: :py:obj:`_GlueCrawlerBaseOperator`


   Delete an AWS Glue crawler.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GlueCrawlerDeleteOperator`

   :param crawler_name: Name of the AWS Glue crawler.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: crawler_name


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GlueCrawlerOperator(config, poll_interval = 5, wait_for_completion = True, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), fail_on_already_running = True, **kwargs)

   Bases: :py:obj:`GlueCrawlerRunOperator`


   Create, update and run an AWS Glue crawler.

   .. deprecated::
       Use :class:`GlueCrawlerCreateOperator`, :class:`GlueCrawlerUpdateOperator`, and
       :class:`GlueCrawlerRunOperator` instead.

   :param config: Configurations for the AWS Glue crawler.
   :param poll_interval: Time (in seconds) to wait between two consecutive calls to check crawler status.
   :param wait_for_completion: Whether to wait for crawl execution completion. (default: True)
   :param deferrable: If True, the operator will wait asynchronously for the crawl to complete.
       This implies waiting for completion. (default: False)
   :param fail_on_already_running: If True (default), raise an exception if the crawler is already running.
       If False, wait for the existing run to complete.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: config


   .. py:method:: execute(context)

      Run an AWS Glue crawler from Airflow.

      :return: The name of the current Glue crawler.



   .. py:method:: execute_complete(context, event = None)


